--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="Description" content="Movie app where you can get information about movies and actors, Angular application">
   <title>Cinema</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
